# DWES-UT04-2025-2026

./: README.md
tareas_dwes/: pyproject.toml
tareas_dwes/tareas/: forms.py  models.py  urls.py  views.py
tareas_dwes/tareas/migrations/: 0001_initial.py  0002_remove_entrega_comentarios_profesor_and_more.py  0002_tarea_tareaevaluable_tareagrupal_tareaindividual_and_more.py
tareas_dwes/tareas/templates/tareas/: buscar_datos_personales.html  buscar_por_dni.html  buscar_usuario.html  crear_tarea.html  crear_tarea_grupal.html  crear_tarea_individual.html  crear_usuario.html  detalle_tarea.html  entregas.html  inicio.html  listar_usuarios.html  mis_datos.html  mis_tareas.html  usuario.html  validaciones.html
tareas_dwes/tareas_dwes/: settings.py  urls.py
tareas_dwes/tareas_dwes/templates/: base_generic.html
tareas_dwes/templates/: base_generic.html
